src/common.css
.sidenav-wrapper {
    position: relative;
    align-items: stretch;
    padding-left: 0 !important;
    padding-right: 0 !important;
    margin-top: 10px;
} 

#sidebar {
    margin-left: -100%;
    min-width: 100%;
    min-height: 100vh;
    transition: all 0.3s;
    z-index: 9999;
    position: absolute;
    top:0;
    left: 0;
}

#sidebar.active {
    margin-left: 0;
    overflow-x: hidden;
    background: #fff;
}

#sidebar .sidebar-header h3{
    border-radius: 0;
    color: #fff;
    font-size: 13px;
    padding: 13px 17px;
    text-transform: uppercase;
    font-weight: 700;
    letter-spacing: .5px;
    background: #78aa42;
    margin: 0;
}

#sidebar #dismiss {
    width: 35px;
    height: 35px;
    position: absolute;
    /* top right corner of the sidebar */
    top: 10px;
    right: 10px;
}

#sidebar .overlay {
    /* full screen */
    width: 100vw;
    height: 100vh;
    /* transparent black */
    background: rgba(0, 0, 0, 0.8);
    position: absolute;
    top: 0;
    left: 0;
    display: none;
    /* middle layer, i.e. appears below the sidebar */
    z-index: 9998;
}

#sidebar ul{
    border: 1px solid #e5e5e5;
    border-top: none;
}

#sidebar ul li a {
    padding: 7px 15px;
    color: #333;
    letter-spacing: 0.2px;
    display: block;
    font-weight: 500;
    cursor: pointer;
}
#sidebar ul li a:hover, #sidebar ul li a:hover .icon, #sidebar ul li.active a, #sidebar ul li.active a .icon {
    color: #b33856;
}

#sidebar ul li a .icon {
    font-size: 14px;
    margin-right: 12px;
    color: #777;
    width: 10px;
}

#sidebarCollapse{
    margin-left: 15px;
    border-bottom: 1px solid #ddd;
}
#sidebarCollapse .breadcrumb {
    background-color: transparent !important;
    padding: 5px 0px;
    font-size: 13px;
    margin-bottom: 5px;
}

#sidebarCollapse .breadcrumb .breadcrumb-item a, #sidebarCollapse .breadcrumb .breadcrumb-item.active, #sidebarCollapse .breadcrumb .breadcrumb-item:before{
    color: #b33856 !important;
}

.action-bar .title{
    padding: 0px;
    color: #834453;
    font-weight: 600;
    font-size: 16px;
}

.action-bar .title .icon, .action-bar .back-select .icon{
    margin-right: 5px;
}

.action-bar .back-select{
    text-align: right;
    cursor: pointer;
}

a[data-toggle="collapse"] {
    position: relative;
}

a[aria-expanded="false"]::before, a[aria-expanded="true"]::before {
    content: '\e259';
    display: block;
    position: absolute;
    right: 20px;
    font-family: 'Glyphicons Halflings';
    font-size: 0.6em;
}

a[aria-expanded="true"]::before {
    content: '\e260';
}

@media (min-width: 576px) {
    #sidebar {
        margin-left: -250px;
        max-width: 250px;
        min-width: 250px;
    }
}
@media (min-width: 768px) {
    #sidebar {
        margin-left: 0;
        position: inherit;
    }
}

/*Blinker*/
.blinker {
  animation: blinker .2s linear infinite;
}

@keyframes blinker {  
  50% { opacity: 0; }
}

